reisntalled shadcn and fixed colors on ios not showing properly

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-
-/* * {
-  outline: 1px dashed rgb(255, 0, 0);
-}; */
-
-/* *:hover {
-outline: 2px dashed rgb(255, 0, 0);
-} */
